--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 					<img src="assets/img/logo-white.svg" width="160"  alt="">
 				</div>
 				<div class="text-right">
-					<small class="">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit, sed 
-					tempor incididunt ut labore et dolore magna aliqua. <br>tate velit e</small>
+					<small class="">Hi <b>Selamat Datang</b> <br> Yuk berkenalan lebih dekat dengan saya <br>Seorang programmer sederhana</small>
 				</div>
 			</div>
 			<div class="card-img-overlay d-flex align-items-center justify-content-center container">
 					<div class="mr-4 text-right">
 						<h1>welcome to <br> my portofolio</h1>
-						<p class="small">" Hanya orang sederhana dan akan terus belajar menjadi lebih baik "</p>
+						<p class="small">Agung Senjaya - <b>Junior Fullstack Developer</b></p>
 					</div>
 					<div>
 						<!-- <img src="https://via.placeholder.com/400x350" alt=""> -->
@@ -32,10 +31,10 @@
 					</div>
 				<div class="container card-img-overlay d-flex align-items-end  justify-content-between text-uppercase">
 					<div>
-						<small class=" mr-2">Scroll Kebawah</small><img src="assets/img/scroll-down.svg" width="20" alt="">
+						<small class=" mr-2 font-weight-bold">Scroll Kebawah</small><img src="assets/img/scroll-down.svg" width="20" alt="">
 					</div>
 					<div>
-						<button class="btn btn-outline-light text-uppercase p-2"><small class="">Design And Develop By Agung Senjaya</small></button>
+						<button class="btn btn-outline-light text-uppercase p-2"><small class="font-weight-bold">Design And Develop By Agung Senjaya</small></button>
 					</div>
 				</div>
 			</div>
@@ -46,9 +45,13 @@
 			<div class="row">
 				<div class="col-md-5 align-self-center">
 					<h3>About Me</h3>
-					<p>Hi salam kenal, saya agung asli orang sukabumi, saya sangat senang belajar hal baru. Selain membuat koding dan desain , saya selalu menyempatkan diri untuk berlibur pastinya harus banyak piknik alias( <b>Pemuda Kurang Piknik</b> ). Saya juga aktif di dalam organisasi kemasyarakatan seperti Rimbas (Remaja Islam Mesjid Albasyarah) dan Sapujagad Pusat. Yang membuat saya terjun di dunia koding adanya dorongan dari orang terdekat dan guru saya semasa smk dan juga karena butuh duit hehe.</p>
+					<p>Hi salam kenal, saya agung asli orang sukabumi, saya sangat senang belajar hal baru. Selain membuat koding dan desain , saya selalu menyempatkan diri untuk berlibur pastinya harus banyak piknik. Saya juga aktif di dalam organisasi kemasyarakatan seperti Rimbas (Remaja Islam Mesjid Albasyarah) dan Sapujagad Pusat. Yang membuat saya terjun di dunia koding adanya dorongan dari orang terdekat dan guru saya semasa smk dan juga karena butuh duit hehe.</p>
 					<hr>
-					<p class="font-weight-bold">FOLLOW US : </p>
+					<p class="font-weight-bold">FOLLOW US : 
+						<span><a href="https://www.facebook.com/agung.senjaya1" target="_blank" title=""><img width="50" src="assets/img/facebook.svg" alt=""></a></span>
+						<span><a href="https://www.instagram.com/senjayaagung/" target="_blank" title=""><img width="50" src="assets/img/instagram.svg" alt=""></a></span>
+						<span><a href="https://www.linkedin.com/in/agung-senjaya-839353105/" target="_blank" title=""><img width="50" src="assets/img/linkedin.svg" alt=""></a></span>
+					</p>
 				</div>
 				<div class="col-md-7">
 					<div class="m-4">
