--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="row">
 				<div class="col-5 align-self-center">
 					<h3>About Me</h3>
-					<p>Hi salam kenal, saya agung asli orang sukabumi, saya sangat senang belajar hal baru. Selain membuat koding dan desain , saya selalu menyempatkan diri untuk berlibur pastinya harus banyak piknik. Saya juga aktif di dalam organisasi kemasyarakatan seperti Rimbas (Remaja Islam Mesjid Albasyarah) dan Sapujagad Pusat. Yang membuat saya terjun di dunia koding adanya dorongan dari orang terdekat dan guru saya semasa smk dan juga karena butuh duit hehe.</p>
+					<p>Hi salam kenal, saya agung asli orang sukabumi, saya sangat senang belajar hal baru. Selain membuat koding dan desain , saya selalu menyempatkan diri untuk berlibur pastinya harus banyak piknik. Saya juga aktif di dalam organisasi kemasyarakatan seperti Rimbas (Remaja Islam Mesjid Albasyarah) dan Sapujagad Pusat. Yang membuat saya terjun di dunia koding adanya dorongan dari orang terdekat dan guru saya semasa sekolah.</p>
 					<hr>
 					<p class="font-weight-bold">FOLLOW US : 
 						<span><a href="https://www.facebook.com/agung.senjaya1" target="_blank" title=""><img width="50" src="assets/img/facebook.svg" alt=""></a></span>
@@ -81,7 +81,7 @@
 								<tr>
 									<td>Skill</td>
 									<td>:</td>
-									<td>Junior full stack developer & design grapich</td>
+									<td>Software enginer & design grapich</td>
 								</tr>
 								<tr>
 									<td>Country</td>
@@ -91,7 +91,7 @@
 								<tr>
 									<td>Curicullum Vitae</td>
 									<td>:</td>
-									<th><a href="#" title="" class="default">Download cv</a></th>
+									<th><a href="assets/agung-2019.pdf" target="_blank" title="" class="default">Download cv</a></th>
 								</tr>
 							</tbody>
 						</table>
